--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
     
     text-decoration: none;
     box-sizing: border-box;
+     -webkit-tap-highlight-color: transparent !important;
     
 }
 
