--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ html{
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out; */
+/*     animiout */
     width: 750px;
 }
 
